--- a/Pogodynka/index.html
+++ b/Pogodynka/index.html
@@ -1,21 +1,39 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Weather in my city</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <main>
+      <h2 class="label">Pogoda w</h2>
+      <form id="search">
+        <div class="flex">
+          <input
+            id="cityIn"
+            type="search"
+            name="city"
+            placeholder="Enter city name"
+            required
+          />
+          <input id="searchButton" type="submit" value="Get Weather" />
+        </div>
+      </form>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Slider</title>
-
-  <link rel="stylesheet" href="style.css">
-  <script src="main.js"></script>
-
-</head>
-
-<body>
-  <header>
-    <h1>Pogodynka by AF</h1>
-  </header>
-  
-</body>
-
+      <section id="result">
+        <h1 id="cityOut"></h1>
+        <ul class="conditions">
+          <li class="city">
+            <img id="mainIcon" src="" alt="" />
+            <div class="main">
+              <p id="mainTemp"></p>
+              <p id="mainDescription"></p>
+            </div>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <script src="main.js"></script>
+  </body>
 </html>
