--- a/Slider/index.html
+++ b/Slider/index.html
@@ -17,10 +17,10 @@
   </header>
   <div id="slider">
     <div class="slides">
-      <div class="slide active-slide first">
+      <div class="slide active-slide firstSlide">
         <img src="img/slide1.jpg" alt="Slide 1">
       </div>
-      <div class="slide">
+      <div class="slide nextSlide" >
         <img src="img/slide2.jpg" alt="Slide 2">
       </div>
       <div class="slide">
@@ -30,23 +30,26 @@
         <img src="img/slide4.jpg" alt="Slide 4">
       </div>
       <div class="slide">
-        <img src="img/slide5.jpg" alt="Slide 5">
+        <h2>Smieszek</h2>
+        <video controls alt="slide 5">
+          <source src="img/smiech.mp4" type="video/mp4">
+        </video>
       </div>
-      <div class="slide last">
+      <div class="slide prevSlide lastSlide">
         <img src="img/slide6.jpg" alt="Slide 6">
       </div>
     </div>
     <div class="dots">
-      <span class="dot active firstDot" onclick="currentSlideShow(1)"></span>
+      <span class="dot active-dot firstDot" onclick="currentSlideShow(0)"></span>
+      <span class="dot nextDot" onclick="currentSlideShow(1)"></span>
       <span class="dot" onclick="currentSlideShow(2)"></span>
       <span class="dot" onclick="currentSlideShow(3)"></span>
       <span class="dot" onclick="currentSlideShow(4)"></span>
-      <span class="dot" onclick="currentSlideShow(5)"></span>
-      <span class="dot lastDot" onclick="currentSlideShow(6)"></span>
+      <span class="dot prevDot lastDot" onclick="currentSlideShow(5)"></span>
     </div>
     
-    <div class="prev" onclick="backSlide()"><img src="img/arrowleft.png" height="60px" alt="arrow"></div>
-    <div class="next" onclick="nextSlide()"><img src="img/arrowright.png" height="60px" alt="arrow"></div>
+    <div class="prev" onclick="moveSlide(-1)"><img src="img/arrowleft.png" height="60px" alt="arrow"></div>
+    <div class="next" onclick="moveSlide(1)"><img src="img/arrowright.png" height="60px" alt="arrow"></div>
     <div class="option">
       <div id="pause" onclick="pauseSlideshow()">Play</div>
       <div id="slideFade" onclick="changeAnimation()">Slide</div>
