--- a/Drumkit/index.html
+++ b/Drumkit/index.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Slider</title>
+  <title>Drumkit</title>
 
   <link rel="stylesheet" href="style.css">
-  <script src="main.js"></script>
+  
 
 </head>
 
@@ -15,7 +15,62 @@
   <header>
     <h1>Drumkit by AF</h1>
   </header>
-  
+  <div class="keys">
+    <div class="key">
+      <kbd>a</kbd>
+      <span>boom</span>
+    </div>
+    <div class="key">
+      <kbd>s</kbd>
+      <span>clap</span>
+    </div>
+    <div class="key">
+      <kbd>d</kbd>
+      <span>hihat</span>
+    </div>
+    <div class="key">
+      <kbd>f</kbd>
+      <span>kick</span>
+    </div>
+    <div class="key">
+      <kbd>g</kbd>
+      <span>openhat</span>
+    </div>
+    <div class="key">
+      <kbd>h</kbd>
+      <span>ride</span>
+    </div>
+    <div class="key">
+      <kbd>j</kbd>
+      <span>snare</span>
+    </div>
+    <div class="key">
+      <kbd>k</kbd>
+      <span>tink</span>
+    </div>
+    <div class="key">
+      <kbd>l</kbd>
+      <span>tom</span>
+    </div>
+
+  </div>
+
+
+  <div class="audios">
+    <audio src="sounds/boom.wav" controls id="s1"></audio>
+    <audio src="sounds/clap.wav" controls id="s2"></audio>
+    <audio src="sounds/hihat.wav" controls id="s3"></audio>
+    <audio src="sounds/kick.wav" controls id="s4"></audio>
+    <audio src="sounds/openhat.wav" controls id="s5"></audio>
+    <audio src="sounds/ride.wav" controls id="s6"></audio>
+    <audio src="sounds/snare.wav" controls id="s7"></audio>
+    <audio src="sounds/tink.wav" controls id="s8"></audio>
+    <audio src="sounds/tom.wav" controls id="s9"></audio>
+  </div>
+
+
+  <script src="main.js"></script>
+
 </body>
 
 </html>
