--- a/Async/index.html
+++ b/Async/index.html
@@ -4,17 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Slider</title>
-
-  <link rel="stylesheet" href="style.css">
+  <title>Async</title>
   <script src="main.js"></script>
 
 </head>
 
 <body>
-  <header>
-    <h1>Async by AF</h1>
-  </header>
   
 </body>
 
