--- a/Notekeep/index.html
+++ b/Notekeep/index.html
@@ -1,21 +1,30 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="pl-PL">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Slider</title>
-
+  <title>Notekeep</title>
   <link rel="stylesheet" href="style.css">
-  <script src="main.js"></script>
-
 </head>
 
 <body>
   <header>
     <h1>Notekeep by AF</h1>
   </header>
+  <div class="addNote">
+    <button class="ShowAddNoteBtn" type="button" onclick="ShowAddNote()">Add note</button>
+    
+    <div class="Notes">
+      <label for="title">Title</label>
+      <input type="text" id="title">
+      <label for="describe">Describe</label>
+      <textarea id="describe"></textarea>
+      <button class="AddNoteBtn" type="button" onclick="addNote()">Add</button>
+    </div>
   
+  </div>
+  
+  <script src="main.js"></script>
 </body>
 
 </html>
