--- a/Canvas/index.html
+++ b/Canvas/index.html
@@ -4,18 +4,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Slider</title>
+  <title>Canvas</title>
 
   <link rel="stylesheet" href="style.css">
-  <script src="main.js"></script>
-
+  
 </head>
 
 <body>
   <header>
     <h1>Canvas by AF</h1>
   </header>
+  <canvas id="canvas" width="1024" height="576"></canvas>
+  <br>
+  Number of balls: <input type="number" id="numBalls" value="5"><br><br>
+  Minimum distance: <input type="number" id="minDist" value="100">
+  <br><br>
+  <button id="startBtn">Start</button>
+  <button id="resetBtn">Reset</button>
+
+  <script src="main.js"></script>
   
 </body>
-
 </html>
