Correct design and name

--- a/Canvas/index.html
+++ b/Canvas/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <header>
-    <h1>Canvas by AF</h1>
+    <h1>Canvas</h1>
   </header>
   <canvas id="canvas" width="1024" height="576"></canvas>
   <br>
