--- a/Notekeep/index.html
+++ b/Notekeep/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <header>
-    <h1>Notekeep by AF</h1>
+    <h1>Notekeep</h1>
   </header>
   <div class="addNote">
     <button class="ShowAddNoteBtn" type="button" onclick="showAddNote()">Add your note</button>
