--- a/Drumkit/index.html
+++ b/Drumkit/index.html
@@ -5,10 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Drumkit</title>
-  
-
   <link rel="stylesheet" href="style.css">
-
 </head>
 
 <body>
@@ -78,8 +75,12 @@
       <img class="imageRecord" id="record3" src="img/microphone.png" onclick="recordTrack(3)">
       <img class="imagePlay" src="img/play.png" onclick="playSounds(tracks[3])">
     </div>
-  </div>
 
+    <div id="track5">
+      <span>Play all</span>
+      <img class="imagePlay" src="img/play.png" onclick="playSoundsAsync()">
+    </div>
+  </div>
 
   <div class="audios">
     <audio src="sounds/boom.wav" controls id="s1"></audio>
@@ -94,7 +95,6 @@
   </div>
 
   <script src="main.js"></script>
-  
 
 </body>
 
